Nova atualização do projeto - Header

--- a/index.html
+++ b/index.html
@@ -34,8 +34,62 @@
   </head>
   <body>
     <div class="page">
-      Testando...
-      <header class="header"></header>
+      <header class="header">
+        <nav class="nav">
+          <img
+            src="./images/logo_coffeeshop_dark.svg"
+            alt="Logotipo da cafeteria Triple Espresso"
+            class="nav__logo"
+          />
+
+          <ul class="nav__links">
+            <li>
+              <a href="#" class="nav__link">Receitas</a>
+            </li>
+            <li>
+              <a href="#" class="nav__link">Reservar uma mesa</a>
+            </li>
+            <li>
+              <a href="#" class="nav__link">Contatos</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header__content">
+          <div>
+            <h1 class="header__title">
+              <span class="header__title header__title_span-accent"
+                >Café especial</span
+              >
+              na biblioteca Triple Peaks
+            </h1>
+            <p class="header__description">
+              Esta é nossa zona de estudo! Temos aquele cafezinho para energizar
+              você e vibrações aconchegantes para soltar a criatividade.
+            </p>
+          </div>
+          <img
+            src="./images/inside_coffee_shop.png"
+            alt="Ilustração 'Dentro da biblioteca'"
+            class="header__image"
+          />
+        </div>
+        <div class="header__footer">
+          <div class="header__time">
+            <p class="header__time header__footer-paragraph">Horários:</p>
+            <p class="header__time header__footer-paragraph">
+              Segunda a sexta (10:00 – 19:00)
+            </p>
+            <p class="header__time header__footer-paragraph">
+              Sábado a domingo (11:00 - 18:00)
+            </p>
+          </div>
+          <div class="header__address">
+            <p class="header__address header__footer-paragraph">
+              200 Success Avenue, a cidade de Triple Peaks
+            </p>
+          </div>
+        </div>
+      </header>
       <main class="content">
         <section class="recipes"></section>
         <section class="reservation"></section>
