--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
           <ul class="nav__links">
             <li>
-              <a href="#" class="nav__link">Receitas</a>
+              <a href="#recipes" class="nav__link">Receitas</a>
             </li>
             <li>
               <a href="#" class="nav__link">Reservar uma mesa</a>
@@ -91,7 +91,44 @@
         </div>
       </header>
       <main class="content">
-        <section class="recipes"></section>
+        <section id="recipes" class="recipes">
+          <h2 class="recipes__title">Receitas</h2>
+          <h3 class="recipes__subtitle">
+            Confira algumas receitas que coletamos para seu lanchinho caseiro:
+          </h3>
+          <div class="recipes__videos">
+            <div class="recipes__video-item">
+              <iframe
+                class="iframe"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?modestbranding=1&rel=0&showinfo=0"
+                title="The Ultimate AeroPress Technique (Episode #3)"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <div class="recipes__video-item-footer">
+                <p class="recipes__video-item-footer-description">
+                  Receita Aeropress
+                </p>
+                <p class="recipes__video-item-footer-description">~5min</p>
+              </div>
+            </div>
+            <div class="recipes__video-item">
+              <iframe
+                class="iframe"
+                src="https://www.youtube.com/embed/st571DYYTR8?modestbranding=1&rel=0&showinfo=0"
+                title="The Ultimate French Press Technique"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <div class="recipes__video-item-footer">
+                <p class="recipes__video-item-footer-description">
+                  Receita Aeropress
+                </p>
+                <p class="recipes__video-item-footer-description">~5min</p>
+              </div>
+            </div>
+          </div>
+        </section>
         <section class="reservation"></section>
       </main>
       <footer class="footer"></footer>
