--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <a href="#recipes" class="nav__link">Receitas</a>
             </li>
             <li>
-              <a href="#" class="nav__link">Reservar uma mesa</a>
+              <a href="#reservation" class="nav__link">Reservar uma mesa</a>
             </li>
             <li>
               <a href="#" class="nav__link">Contatos</a>
@@ -75,16 +75,12 @@
         </div>
         <div class="header__footer">
           <div class="header__time">
-            <p class="header__time header__footer-paragraph">Horários:</p>
-            <p class="header__time header__footer-paragraph">
-              Segunda a sexta (10:00 – 19:00)
-            </p>
-            <p class="header__time header__footer-paragraph">
-              Sábado a domingo (11:00 - 18:00)
-            </p>
+            <p class="header__paragraph">Horários:</p>
+            <p class="header__paragraph">Segunda a sexta (10:00 – 19:00)</p>
+            <p class="header__paragraph">Sábado a domingo (11:00 - 18:00)</p>
           </div>
           <div class="header__address">
-            <p class="header__address header__footer-paragraph">
+            <p class="header__paragraph">
               200 Success Avenue, a cidade de Triple Peaks
             </p>
           </div>
@@ -99,7 +95,7 @@
           <div class="recipes__videos">
             <div class="recipes__video-item">
               <iframe
-                class="iframe"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?modestbranding=1&rel=0&showinfo=0"
                 title="The Ultimate AeroPress Technique (Episode #3)"
                 referrerpolicy="strict-origin-when-cross-origin"
@@ -114,7 +110,7 @@
             </div>
             <div class="recipes__video-item">
               <iframe
-                class="iframe"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8?modestbranding=1&rel=0&showinfo=0"
                 title="The Ultimate French Press Technique"
                 referrerpolicy="strict-origin-when-cross-origin"
@@ -129,7 +125,7 @@
             </div>
           </div>
         </section>
-        <section class="reservation"></section>
+        <section id="reservation" class="reservation"></section>
       </main>
       <footer class="footer"></footer>
     </div>
