--- a/index.html
+++ b/index.html
@@ -38,52 +38,46 @@
         <nav class="nav">
           <img
             src="./images/logo_coffeeshop_dark.svg"
-            alt="Logotipo da cafeteria Triple Espresso"
+            alt="logo Triple Espresso"
             class="nav__logo"
           />
-
           <ul class="nav__links">
             <li>
-              <a href="#recipes" class="nav__link">Receitas</a>
+              <a class="nav__link" href="#recipes">Receitas</a>
             </li>
             <li>
-              <a href="#reservation" class="nav__link">Reservar uma mesa</a>
+              <a class="nav__link" href="#reservation">Reservar uma mesa</a>
             </li>
             <li>
-              <a href="#" class="nav__link">Contatos</a>
+              <a class="nav__link" href="#footer">Contatos</a>
             </li>
           </ul>
         </nav>
-        <div class="header__content">
-          <h1 class="header__title">
-            <span class="header__title header__title_span-accent"
-              >Café especial</span
-            >
-            na biblioteca Triple Peaks
-          </h1>
-          <p class="header__description">
-            Esta é nossa zona de estudo! Temos aquele cafezinho para energizar
-            você e vibrações aconchegantes para soltar a criatividade.
-          </p>
-          <img
-            src="./images/inside_coffee_shop.png"
-            alt="Ilustração 'Dentro da biblioteca'"
-            class="header__image"
-          />
-        </div>
+        <h1 class="header__title">
+          <span class="header__span-accent">Café especial</span>
+          na biblioteca Triple Peaks
+        </h1>
+        <p class="header__description">
+          Esta é nossa zona de estudo! Temos aquele cafezinho para energizar
+          você e vibrações aconchegantes para soltar a criatividade.
+        </p>
+        <img
+          class="header__image"
+          src="./images/inside_coffee_shop.png"
+          alt="Cafeteria TripleTen"
+        />
         <div class="header__footer">
-          <div class="header__time">
+          <div>
             <p class="header__paragraph">Horários:</p>
             <p class="header__paragraph">Segunda a sexta (10:00 – 19:00)</p>
             <p class="header__paragraph">Sábado a domingo (11:00 - 18:00)</p>
           </div>
-          <div class="header__address">
-            <p class="header__paragraph">
-              200 Success Avenue, a cidade de Triple Peaks
-            </p>
-          </div>
+          <p class="header__paragraph">
+            200 Success Avenue, a cidade de Triple Peaks
+          </p>
         </div>
       </header>
+
       <main class="content">
         <section id="recipes" class="recipes">
           <h2 class="recipes__title">Receitas</h2>
