--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </section>
         <section id="reservation" class="reservation">
           <h2 class="reservation__title">Reservar uma mesa</h2>
-          <form class="reservation__form">
+          <form class="reservation__form form">
             <fieldset class="form__fieldset">
               <label for="input_name" class="form_label">Nome *</label>
               <input
