Nova atualização do projeto - Fomulario Reservas-Fix Label

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <h2 class="reservation__title">Reservar uma mesa</h2>
           <form class="reservation__form form">
             <fieldset class="form__fieldset">
-              <label for="input_name" class="form_label">Nome *</label>
+              <label for="input_name" class="forma__label">Nome *</label>
               <input
                 type="text"
                 class="form__input"
@@ -130,7 +130,7 @@
                 placeholder="Nome"
                 required
               />
-              <label for="invited_number" class="form_label"
+              <label for="invited_number" class="form__label"
                 >Número de convidados *</label
               >
               <input
@@ -143,7 +143,7 @@
                 placeholder="1-8"
                 required
               />
-              <label for="date_time" class="form_label">Data e hora *</label>
+              <label for="date_time" class="forma__label">Data e hora *</label>
               <input
                 type="datetime-local"
                 class="form__input"
@@ -152,7 +152,7 @@
                 required
               />
 
-              <label for="email" class="form_label">Seu e-mail: *</label>
+              <label for="email" class="forma__label">Seu e-mail: *</label>
               <input
                 type="email"
                 class="form__input"
