--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <h2 class="reservation__title">Reservar uma mesa</h2>
           <form class="reservation__form form">
             <fieldset class="form__fieldset">
-              <label for="input_name" class="forma__label">Nome *</label>
+              <label for="input_name" class="form__label">Nome *</label>
               <input
                 type="text"
                 class="form__input"
