Nova atualização do projeto - Fomulario Reservas-Fix form_label2

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 placeholder="1-8"
                 required
               />
-              <label for="date_time" class="forma__label">Data e hora *</label>
+              <label for="date_time" class="form__label">Data e hora *</label>
               <input
                 type="datetime-local"
                 class="form__input"
@@ -152,7 +152,7 @@
                 required
               />
 
-              <label for="email" class="forma__label">Seu e-mail: *</label>
+              <label for="email" class="form__label">Seu e-mail: *</label>
               <input
                 type="email"
                 class="form__input"
