--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <h2 class="footer__social-heading">Mídia Social</h2>
             <ul class="footer__list">
               <li class="footer__list-item">
-                <a href="" class="footer__social-link">
+                <a href="https://www.facebook.com/" class="footer__social-link">
                   <img
                     src="./images/facebook_white.svg"
                     alt="icone de facebook"
@@ -205,7 +205,10 @@
                 >
               </li>
               <li class="footer__list-item">
-                <a href="" class="footer__social-link">
+                <a
+                  href="https://www.instagram.com/"
+                  class="footer__social-link"
+                >
                   <img
                     src="./images/instagram_white.svg"
                     alt="icone do instagram"
